Co-authored-by: Benjamin Niddam <nddm.benjamin@gmail.com> Co-authored-by: Kuurama <Kuurama@users.noreply.github.com>

--- a/frontend/dev/index.html
+++ b/frontend/dev/index.html
@@ -20,7 +20,7 @@
 		<meta name="theme-color" content="#eac531" />
 
 		<!-- Icons -->
-		<icon src="/imgs/" bg="#eac531" />
+		<icon name="logo" />
 
 		<!-- Fonts -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
@@ -34,6 +34,8 @@
 	</head>
 
 	<body>
-		<h2>Hello world</h2>
+		<player-entity img="penis"></player-entity>
+		<div class="condoms"></div>
+		<div class="score"></div>
 	</body>
 </html>
